--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                         </div>
                     </div>
                     
-                    <a href="https://learnix-player-nine.vercel.app/?play=aHR0cHM6Ly9kZ2E5a21lMDgwbzB3LmNsb3VkZnJvbnQubmV0L291dC92MS9lMDFiYWEyMGNjYWY0NmMzYjY3YmVjNmQwM2ZmNjEzOC9pbmRleF80Lm0zdTg/c3RhcnQ9MTc1NzMzMTAwMw==" class="live-card-action">
+                    <a href="https://learnix-official-player.vercel.app/?play=aHR0cHM6Ly9kZ2E5a21lMDgwbzB3LmNsb3VkZnJvbnQubmV0L291dC92MS9lMDFiYWEyMGNjYWY0NmMzYjY3YmVjNmQwM2ZmNjEzOC9pbmRleF80Lm0zdTg/c3RhcnQ9MTc1NzQxNzUxMg==" class="live-card-action">
                         <i class="fas fa-play-circle"></i> Join Class at 5:00 PM
                     </a>
                 </div>
