--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                         </div>
                     </div>
                     
-                    <a href="https://learnix-player-nine.vercel.app/?play=aHR0cHM6Ly9kMTMzdzZsZHJlazFlci5jbG91ZGZyb250Lm5ldC9vdXQvdjEvYzkyMzc4N2Y2YjNiNDBjYmJmYmRjNTFkMmQ3NmU1MWUvaW5kZXhfNC5tM3U4P3N0YXJ0PTE3NTczNDIzNzE=" class="live-card-action disabled">
+                    <a href="https://learnix-official-player.vercel.app/?play=aHR0cHM6Ly9kMTMzdzZsZHJlazFlci5jbG91ZGZyb250Lm5ldC9vdXQvdjEvYzkyMzc4N2Y2YjNiNDBjYmJmYmRjNTFkMmQ3NmU1MWUvaW5kZXhfNC5tM3U4P3N0YXJ0PTE3NTc0MjgzODA=" class="live-card-action disabled">
                         <i class="fas fa-clock"></i> Class at 8:00 PM
                     </a>
                 </div>
