--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
             </div>
             
             <div class="subjects-grid">
-                <div class="subject-card" onclick="window.location.href="https://nt.studyspark.site/study?batch=9Aarambh">
+                <div class="subject-card" onclick="window.location.href="https://nt.studyspark.site/study?batch=9Aarambh'">
                     <div class="subject-img">
                         <i class="fas fa-calculator"></i>
                     </div>
