--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                     <i class="fas fa-chevron-right card-arrow"></i>
                 </div>
                 
-                <div class="subject-card" onclick="window.location.href='https://rolexcoderz.live/9thScience/'">
+                <div class="subject-card" onclick="window.location.href='https://nt.studyspark.site/study?batch=9Aarambh'">
                     <div class="subject-img">
                         <i class="fas fa-atom"></i>
                     </div>
